@@ -32,6 +32,7 @@
 /set type=dir mode=@DIR_PERMS@ uname=@OWNER_NAME@ gname=@GROUP_NAME@
 .
     include
+        @HEADER_VERSION@
         cluster
             ClusterNetwork
             ..
@@ -62,5 +63,6 @@
             ApplicationDataManager
             ..
         ..
+        @CLOSE_HEADER_VERSION@
     ..
 ..
