@@ -1,7 +1,10 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+May-23-2006 dshipton    Added version information to data directory
+                        NEW VERSION: 1.1.10
 May-23-2006 dshipton    Changed the static and shared library names to include
                         the version as part of the base library name
+                        NEW VERSION: 1.1.9
 May-12-2005 patrick     Updated to VPR 1.1.20 and removed all exception
                         specifications except those that are required by a
                         base class.
